# stable-ui

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ReadMe.md  TODO  build.sh  main.cpp  prompts  requirements.txt  run.sh  start_docker.bat  start_docker.sh
.cache/clangd/index/: BaseObject.h.33BC6171B216B96B.idx  ErrorHandler.h.774F0FD8AF5C8B0A.idx  QDisplay.h.D385158D50FCA64B.idx  QDisplay_MenuBar.h.FF54221579F99FE1.idx  QLogger.h.59EDD15870284906.idx  RenderManager.cpp.EE5154D502C66FEB.idx  RenderManager.h.BEC9F8895F38B70A.idx  Square.h.F40A2483415AD739.idx  Triangle.h.A06748B5DE750D61.idx  main.cpp.1438FD9529D96F70.idx
.github/workflows/: cmake.yml  release-windows.yml  release.yml
data/: config.yaml
data/config/: imgui.ini  model_config.yaml  module_config.yaml
data/docker/: .env  .env_docker  Dockerfile  docker-compose-cpu.yml  docker-compose-nvidia.yml  docker-compose.yml  entrypoint.sh  environment.yaml  sd-server.sh  sd-supervisor.sh  supervisord.conf
data/docker/files/: Qtxt2img.py
data/images/: uv_grid.png~
data/models/: model_config.yaml
data/models/configs/: model_config.yaml  module_config.yaml
data/models/configs/models/: sd_xl_base.yaml  sd_xl_refiner.yaml
data/models/configs/vae/: sdxl-vae.json  vae-ft-mse.json
data/module-data/: ReadMe.md  setup.py
data/module-data/stable-diffusion-v2/: init.sh  init.yaml  update.sh
data/module-data/stable-diffusion-v2/files/: Qimg2img.py  Qtxt2img.py
data/module-data/stable-ui/: ReadMe.md  init.sh  init.yaml  update.sh
data/module-data/stable-ui-scripts/: init.sh  init.yaml  update.sh
data/module-data/stable-ui-scripts/files/: Qimg2img.py  Qtxt2img.py  sd_model_server.py
data/module-data/stable-ui-scripts/files/common/: __init__.py  devices.py  lowvram.py  sd_model.py
data/module-data/stable-ui-scripts/files/sd/: sd_base_process.py  sd_model.py
data/module-data/stable-ui/files/: Qimg2img.py  Qtxt2img.py  sd_model_server.py
data/module-data/stable-ui/files/common/: devices.py  metadata.py  samplers.py  schedulers.py
data/module-data/stable-ui/files/sd/: img2img.py  sd_base_process.py  sd_model.py  txt2img.py
data/module-data/stable-ui/files/sd_client/: sd_client.py
data/module-data/stable-ui/files/sd_server/: sd_model_server.py
data/module-data/upscale/: init.sh  init.yaml
data/module-data/upscale/files/: gui.yaml
data/modules/: ReadMe.md  setup.py
data/modules/stable-ui/: ReadMe.md  init.sh  init.yaml
data/modules/stable-ui/files/: sd_model_server.py
data/modules/stable-ui/files/common/: devices.py  metadata.py
data/modules/stable-ui/files/sd/: convert.py  sd_base_process.py  sd_model.py
data/modules/upscale/: init.yaml
data/scripts/: sd_commands.py  start_sd_server.bat  start_sd_server.sh
data/shaders/: Base_V.glsl  Grid_F.glsl  Grid_V.glsl  MainWindow_F.glsl  Selection_F.glsl  Selection_V.glsl
data/shared-config/: model_config.yaml  module_config.yaml
docs/: architecture diagram
scripts/: analysis.sh  build.bat  build.sh  build_release.bat  deploy.bat  deploy.sh  package.sh  run.bat  run.sh  start_docker.bat  start_docker.sh
scripts/docker/: start_docker.bat  start_docker.sh
scripts/lin/: deploy.sh  package.sh  run.sh
scripts/pipeline/: package.bat  package.sh
scripts/win/: package.bat  stable-ui.bat  start_docker.bat
src/: QLogger.h  StableManager.cpp  StableManager.h  config.h  imgui.ini  main.cpp
src/Client/: Commands.h  Heartbeat.cpp  Heartbeat.h  SDCommandsInterface.cpp  SDCommandsInterface.h  StableClient.cpp  StableClient.h
src/Config/: config.h  model_config.h  structs.h  types.h
src/Display/: ErrorHandler.h  QDisplay.h  QDisplay_Base.h  QDisplay_MainWindow.h  QDisplay_MenuBar.h  Themes.h  YamlDisplayBuilder.h
src/Display/Menus/: QDisplay_ContextMenu.h  QDisplay_Image2Image.h  QDisplay_MainWindow.h  QDisplay_MenuBar.h  QDisplay_Text2Image.h
src/Display/Menus/BottomBar/: QDisplay_BottomBar.h  QDisplay_Image2Image.h  QDisplay_Text2Image.h
src/Display/Menus/LeftBar/: QDisplay_LeftBar.h
src/Display/Menus/LeftSideBar/: QDisplay_Image2Image.h  QDisplay_LeftSideBar.h  QDisplay_NodeWindow.h  QDisplay_Painting.h  QDisplay_Preview.h  QDisplay_Text2Image.h
src/Display/Menus/RightSideBar/: QDisplay_CanvasTools.h  QDisplay_ContentBrowser.h  QDisplay_RightSideBar.h  QDisplay_SelectionTools.h
src/Display/Menus/ToolsMenu/: QDisplay_CanvasTools.h  QDisplay_Image2Image.h  QDisplay_Text2Image.h  QDisplay_ToolsMenu.h
src/Display/Menus/TopBar/: QDisplay_ConfigureModel.h  QDisplay_ConfigureModules.h  QDisplay_ContentBrowser.h  QDisplay_ImportModel.h  QDisplay_ImportVAE.h  QDisplay_LoadFile.h  QDisplay_LoadModel.h  QDisplay_LogWindow.h  QDisplay_NewCanvas.h  QDisplay_PluginsWindow.h  QDisplay_SaveFile.h  QDisplay_TopBar.h
src/Display/submenus/: QDisplay_MenuBar.h  QDisplay_img2img.h  QDisplay_txt2img.h
src/Helpers/: GLHelper.cpp  GLHelper.h  QLogger.h  SHA1.h  Serializer.h  States.h  Timer.h  asyncQueue.h  hash.h
src/Helpers/Indexer/: Crawler.h  Indexer.cpp  Indexer.h  InvertedIndex.h  MetaData.h
src/Indexer/: Crawler.h  Indexer.cpp  Indexer.h  InvertedIndex.h  MetaData.h  asyncQueue.h
src/Rendering/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Helper.cpp  Helper.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderManager.cpp  RenderManager.h  StableManager.cpp  StableManager.h
src/Rendering/canvas/: Canvas.cpp  Canvas.h
src/Rendering/objects/: BaseObject.cpp  BaseObject.h  Canvas.cpp  Canvas.h  Helper.h  Image.cpp  Image.h  Layer.cpp  Layer.h  MainWindow.cpp  MainWindow.h  Selection.cpp  Selection.h  WindowSelection.cpp  WindowSelection.h
src/Rendering/objects/GLImage/: GLImage.cpp  GLImage.h
src/Rendering/objects/chunk/: Chunk.cpp  Chunk.h
src/Rendering/objects/grid/: GridChunk.cpp  GridChunk.h
src/Rendering/objects/image/: Image.cpp  Image.h
src/SDInterface/: Heartbeat.cpp  Heartbeat.h  SDCommandsInterface.cpp  SDCommandsInterface.h
src/SDInterface/py/: SnakeHandler.cpp  SnakeHandler.h
src/Third Party/stb/: stb_image_resize.h
(+17 files in other folders)
